--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
-  "type" : "module",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,7 +19,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "stream-chat": "^8.60.0"
+    "stream-chat": "^8.60.0",
+    "streamsync": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
