--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.6.2",
     "stream-chat": "^9.9.0",
     "stream-chat-react": "^13.2.1",
+    "streamsync": "file:..",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
